--- a/index.html
+++ b/index.html
@@ -1,58 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pereira</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header>
+        <h1><strong>Lotus Carlton</strong></h1>
+        <img src="https://upload.wikimedia.org/wikipedia/pt/c/c2/Lotus_logo_pt.png" alt="Vauxhall logo">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
         <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&amp;display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@100..900&amp;display=swap"
             rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Just Don't Stop Oil</title>
-    <link rel="stylesheet" href="styless.css">
-</head>
-<body>
-    <header>
-        <h1><strong>Just Don't Stop Oil</strong></h1>
-        <img src="logo.png" alt="Just Don't Stop Oil logo">
     </header>
     <main>
         <section>
-            <h2><strong>Quem Somos</strong></h2>
-            <p>A <strong>Just Don’t Stop Oil</strong> é uma organização sem fins lucrativos que nasceu da paixão pelo <em>mundo automotivo</em> e da convicção de que a combustão interna ainda tem muito a oferecer à sociedade. Somos uma ONG que acredita no equilíbrio entre progresso e tradição: defendemos a preservação dos motores a combustão como parte essencial da cultura automotiva, ao mesmo tempo em que buscamos soluções sustentáveis para reduzir os impactos ambientais. Nosso objetivo é mostrar que é possível diminuir a poluição sem abolir a combustão interna, incentivando tecnologias mais limpas, eficientes e acessíveis, sempre em respeito à liberdade de escolha e à paixão pelas máquinas que movem o mundo.</p>
-            <h2><strong>Nossa Missão</strong></h2>
-            Nossa missão é defender o direito de manter viva a combustão interna, especialmente no mundo automotivo, preservando a cultura, a inovação e a paixão que os motores a combustão representam. Acreditamos que é possível aliar a evolução tecnológica com práticas sustentáveis, reduzindo os impactos ambientais sem abolir os motores que movem gerações e histórias.
-            <h2><strong>Nossos Valores</strong></h2>
-            <details>
-                <summary>Paixão pela combustão:</summary>
-                <p>Preservamos a identidade automotiva que os motores a combustão carregam.</p>
-            </details>
-            <details>
-                <summary>Sustentabilidade com equilíbrio:</summary>
-                <p>Buscamos alternativas que reduzam emissões sem extremismos.</p>
-            </details>
-            <details>
-                <summary>Inovação consciente:</summary>
-                <p>Apoiamos pesquisas em combustíveis limpos, motores mais eficientes e tecnologias híbridas.</p>
-            </details>
-            <details>
-                <summary>Liberdade automotiva:</summary>
-                <p>Defendemos o direito de escolha das pessoas sobre o que dirigem.</p>
-            </details>
-            <details>
-                <summary>Cultura e tradição:</summary>
-                <p>Valorizamos a herança automotiva e sua importância cultural e social.</p>
-            </details>
-        </section>
-        <img src="315d9d56-6fb7-49d8-b35d-ef5fb78af55d.png" alt="">
-        <section>
-            
+            <p><strong>Lotus Carlton</strong> foi um carro concebido pela Lotus e que usa a plataforma do <em>Opel/Vauxhall Omega</em>. Produzido na Inglaterra de 1990 até 1992, foi também vendido na Europa, com a designação <em>Lotus Omega</em>.<br>
+<br>
+            Como qualquer outro veículo da <strong>Lotus</strong>, este carro tem como código o Type 104. As diferenças no exterior
+            foram poucas em relação ao sedã normal: Aerofólio, entradas de ar no capô, logotipos da Lotus na lateral do carro, velocímetro com escala de até trezentos quilômetros por hora. Por menores que fossem, esses tornaram o "simples" Omega em um sedã mais agressivo.</p>
+            <img src="https://i.pinimg.com/736x/75/2e/54/752e543792c6c0bcb13f761c255c7dbd.jpg" alt="o carro">
         </section>
     </main>
-    <footer>
-        <p>Just Don't Stop Oil: <em>Todos os direitos reservados © 2025</em></p>
-    </footer>
+
 </body>
+<footer>
+    <details>
+        <summary>Clique para ver mais detalhes</summary>
+        <p>Todos os direitos reservados © 2025
+        </p>
+    </details>
+</footer>
+
 </html>
